# first-look

./: .gitignore  README.md  config.yaml  main.py  pyproject.toml
docs/: astral-sh-ruff.html  httpie-cli.html  index.html  pallets-click.html
environments/ubuntu-22.04/: Dockerfile
reports/: AkrijSama-Shinobi.md  astral-sh-ruff.md  httpie-cli.md  jqlang-jq.md  pallets-click.md
src/: agent.py  analyzer.py  installer.py  monitor.py  pipeline.py  reporter.py  site.py
tests/: test_core.py
